--- a/PetGrooming/Views/Pet/List.cshtml
+++ b/PetGrooming/Views/Pet/List.cshtml
@@ -7,7 +7,7 @@
 <h2>List of Pets</h2>
 
 <div>
-    <a href="/Pet/New/">Add Pet</a>
+    <a href="/Pet/New/" class="btn btn-info" role="button">Add Pet</a>
 </div>
 
 <table class="table table-striped table-hover">
@@ -16,6 +16,7 @@
             <th>Name</th>
             <th>Species</th>
             <th>Weight</th>
+            <th>Color</th>
             <th>Edit</th>
             <th>Delete</th>
         </tr>
@@ -29,8 +30,9 @@
                     <td><a href="/Pet/Show/@Pet.PetID">@Pet.PetName</a></td>
                     <td>@Pet.Species.Name</td>
                     <td>@Pet.Weight</td>
-                    <td><a href="/Pet/Update/@Pet.PetID">Edit</a></td>
-                    <td><a href="/Pet/Delete/@Pet.PetID">Delete</a></td>
+                    <td>@Pet.Color</td>
+                    <td><a class="btn btn-info" role="button" href="/Pet/Update/@Pet.PetID">Edit</a></td>
+                    <td><a class="btn btn-info" role="button" href="/Pet/Delete/@Pet.PetID">Delete</a></td>
                 </tr>
             }
         }
