--- a/PetGrooming/Views/Species/List.cshtml
+++ b/PetGrooming/Views/Species/List.cshtml
@@ -7,7 +7,7 @@
 
 <h2>List of Species</h2>
 <div>
-    <a href="/Species/Add/">Add Species</a>
+    <a class="btn btn-info" role="button" href="/Species/Add/">Add Species</a>
 </div>
 
 <table class="table table-striped table-hover">
@@ -25,8 +25,8 @@
             {
                 <tr>
                     <td><a href="/Species/Show/@species.SpeciesID">@species.Name</a></td>
-                    <td><a href="/Species/Update/@species.SpeciesID">Edit</a></td>
-                    <td><a href="/Species/Delete/@species.SpeciesID">Delete</a></td>
+                    <td><a class="btn btn-info" role="button" href="/Species/Update/@species.SpeciesID">Edit</a></td>
+                    <td><a class="btn btn-info" role="button" href="/Species/Delete/@species.SpeciesID">Delete</a></td>
                 </tr>
             }
         }
